--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,8 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+img {
+    width: 50%;
+    height: auto;
+}
