change icon sizing and alignment of feature rows

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,3 +10,12 @@
 .page__title {
     margin-bottom: 0;
 }
+
+.archive__item {
+    text-align: center;
+
+    img {
+        width: 50%;
+        height: auto;
+    }
+}
