--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,11 +4,15 @@
 
 @charset "utf-8";
 
+$link-color: white;
+
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
 .page__title {
     margin-bottom: 0;
+    text-align: center;
+    text-shadow: 2px 3px 6px rgb(0, 0, 0);
 }
 
 .archive__item {
