coloquei favicon no default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,4 +39,7 @@
     {% include scripts.html %}
 
   </body>
+
+  <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+
 </html>
